feat: link main repository branch with heroku service

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsnd --respawn src/main.ts",
     "start": "node build/main.js",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "heroku": "git push heroku main"
   },
   "repository": {
     "type": "git",
