feat: add initial user model

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Database settings
 
 DB_HOST = 'cdm1s48crk8itlnr.cbetxkdyhwsb.us-east-1.rds.amazonaws.com'
-DB_USER_NAME = 'a31jmeg5ecpv0r8k'
-DB_PASSWORD = 'bfpauqw3h6fdzcdy'
-DB_NAME = 'okt9cbe8iwweoftt'
+DB_USER_NAME = 'atus1dyaezeny12l'
+DB_PASSWORD = 'grtn16cth0ltszy0'
+DB_NAME = 'mgy9m84a5ojcnmm7'
 DB_TYPE = 'mysql'
 
 # Secret for JWT
