--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
